--- a/send_email_from_python.ipynb
+++ b/send_email_from_python.ipynb
@@ -20,7 +20,7 @@
     "# Set the subject and body of the email\n",
     "subject = 'Check out my new video!'\n",
     "body = \"\"\"\n",
-    "I've just published a new video on \"\"\"\n",
+    "I've just published a new video on one \"\"\"\n",
     "\n",
     "em = EmailMessage()\n",
     "em['From'] = email_sender\n",
